--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "babel-node index.js",
-    "install-self": "rm -rf temp && babel-node index . temp && rm -rf node_modules && mv temp/node_modules node_modules && rmdir temp"
+    "install-self": "rm -rf temp && babel-node index . temp && rm -rf node_modules && mv temp/node_modules node_modules && rmdir temp",
+    "test": "jest"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -14,5 +15,8 @@
     "semver": "^5.3.0",
     "tar-fs": "^1.15.3",
     "tar-stream": "^1.5.4"
+  },
+  "devDependencies": {
+    "jest": "^20.0.4"
   }
 }
